# hannukahofdata

./: README.md  flake.nix  hannukahofdata.cabal  scripts.nix
app/: Main.hs
src/: Core.hs
